# simplex-pdf

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  simplex-pdf-spec.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
.planning/: STATE.md  architecture.md  phase-1-plan.md  phase-2-plan.md  project-config.md  testing-checklist.md
.planning/workflows/m1-pdf-loading/: plan.md
.planning/workflows/m2-navigation/: plan.md
.planning/workflows/m3-search/: plan.md
.planning/workflows/m4-annotations/: plan.md
scripts/: setup-pdfium.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: annotate.rs  file.rs  forms.rs  mod.rs  pages.rs  search.rs  sign.rs  view.rs
src-tauri/src/pdf/: annotations.rs  export.rs  forms.rs  mod.rs  pages.rs  parser.rs  renderer.rs  search.rs  signing.rs
src-tauri/src/storage/: field_library.rs  mod.rs  preferences.rs  recent_files.rs  signatures.rs
src-tauri/src/utils/: error.rs  mod.rs
src/components/: FieldLibrary.tsx  FormFiller.tsx  FuzzyDropdown.tsx  PageManager.tsx  SearchBar.tsx  Sidebar.tsx  SignatureManager.tsx  Toolbar.tsx  Viewer.tsx
src/lib/: annotations.ts  api.ts  fuzzy.ts  state.ts
src/styles/: main.css
