[package]
name = "simplex-pdf"
version = "0.1.0"
description = "A modern PDF viewer and editor"
authors = ["Simplex PDF Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "simplex_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Optimize all dependencies even in dev mode.
# This makes PNG encoding, image processing, and PDFium calls fast
# while keeping our own code unoptimized for quick recompilation.
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
pdfium-render = "0.9"
base64 = "0.22"
image = "0.25"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
